--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
   --color-bHeaderBg: #F5F5F3;
   --color-menuHeading: #262626;
   --color-footerTexts: #6D6D6D;
+  --color-infoBg: #F0F0F0;
 
   --font-dmSans: "DM Sans", "sans-serif"; 
 }
