--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
   --color-header: #767676;
   --color-bHeaderBg: #F5F5F3;
   --color-menuHeading: #262626;
+  --color-similarBlack: #2B2B2B;
   --color-footerTexts: #6D6D6D;
   --color-infoBg: #F0F0F0;
 
